--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "devDependencies": {
     "@eslint/js": "^9.29.0",
-    "eslint": "^9.29.0",
-    "eslint-plugin-react": "^7.37.5",
     "globals": "^16.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
-    "prettier": "^3.5.3",
-    "typescript-eslint": "^8.34.1"
+    "prettier": "^3.5.3"
   },
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
-    "prepare": "husky"
+    "test": "echo \"No tests yet\" && exit 0"
   }
 }
