--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
+    "@types/validator": "^13.15.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "validator": "^13.15.15"
   }
 }
