--- a/backend/package.json
+++ b/backend/package.json
@@ -28,8 +28,10 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
+    "@types/supertest": "^6.0.3",
     "@types/validator": "^13.15.2",
     "jest": "^30.0.4",
+    "supertest": "^7.1.3",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
