--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
+    "slugify": "^1.6.6",
     "zod": "^3.25.74"
   },
   "devDependencies": {
