--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
     "slugify": "^1.6.6",
     "zod": "^3.25.74"
@@ -30,6 +33,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.3",
     "@types/supertest": "^6.0.3",
     "@types/validator": "^13.15.2",
