--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-avatar": "^5.0.4",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
