--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
     "slugify": "^1.6.6",
+    "stripe": "^18.4.0",
     "zod": "^3.25.74"
   },
   "devDependencies": {
