--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest ",
+    "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "seed": "ts-node src/scripts/seed.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.0.3",
+    "@types/validator": "^13.15.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
@@ -27,24 +31,15 @@
     "mysql2": "^3.14.1",
     "slugify": "^1.6.6",
     "stripe": "^18.4.0",
-    "zod": "^3.25.74"
+    "zod": "^3.25.74",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^24.0.3",
-    "@types/supertest": "^6.0.3",
-    "@types/validator": "^13.15.2",
     "jest": "^30.0.4",
     "supertest": "^7.1.3",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3",
-    "validator": "^13.15.15"
+    "typescript": "^5.8.3"
   }
 }
